syntax = "proto3";
package basekv;

option java_multiple_files = true;
option java_package = "com.baidu.bifromq.basekv.proto";
option optimize_for = SPEED;

message DescriptorKey{
  string storeId = 1;
  bytes replicaId = 2;
}
